tests/samples/negative/functions/duplicate_type_member_enum_case_method.ax
module duplicate_type_member_enum_case_method;

enum Option {
    some(i32),
    none,
}

impl Option {
    fn some(value: i32) -> Option {
        return Option.some(value);
    }
}

fn main() -> i32 {
    return 0;
}
